fixed issue with tooltips where they weren't displayed on top of all dialogs. tooltips now are displayed on a z-index controlled by the window manager (the z-index of the highest window + 1)

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -72,7 +72,6 @@ $dialog-grey: #d4d0c8;
 
 .react-win32dialog-tooltip {
     display: block;
-    z-index: 3;
     position: absolute;
     border: 1px solid black;
     background-color: #FFFFE1;
